AdminGachaConfigController passait directement par le repo.